# llvm-obfuscator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/passes/: BasicBlockSplittingPass.h  BogusControlFlowPass.h  ControlFlowFlatteningPass.h  InstructionSubstitutionPass.h  OpaquePredicatesPass.h  StringEncryptionPass.h
src/: CMakeLists.txt  RegisterPasses.cpp
src/passes/: BasicBlockSplittingPass.cpp  BogusControlFlowPass.cpp  ControlFlowFlatteningPass.cpp  InstructionSubstitutionPass.cpp  OpaquePredicatesPass.cpp  StringEncryptionPass.cpp
